# distinctdeer

./: README.md  pyproject.toml
src/distinctdeer/: __init__.py  cli.py  commands.py  editor.py  parser.py  parser_config.py  printer.py  selector.py
tests/: test_cli.py  test_editor.py  test_markdown.md  test_parser.py  test_selector.py
tests/data/: simple.md  test_markdown.md
